--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>🌔 Galaxy Mix 📼</h1>
-    <div id="playlists"></div>
+    <div id="playlists">
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
